[package]
name = "dvn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
settimeout = "0.1.2"
flate2 = "1.0.25"
tar = "0.4.38"
